@@ -8,6 +8,7 @@ openssl (1.0.1e-3) unstable; urgency=low
   * Enable assembler for the arm targets, and remove armeb.
     Patch by Riku Voipio <riku.voipio@iki.fi> (Closes: #676533)
   * Add support for x32 (Closes: #698406)
+  * enable ec_nistp_64_gcc_128 on *-amd64 (Closes: #698447)
 
  -- Kurt Roeckx <kurt@roeckx.be>  Mon, 20 May 2013 16:56:06 +0200
 
